# wasm-superoptimizer

./: .gitignore  README.md
benchmarks/: analysis.R
benchmarks/browser/: README.md  package-lock.json  package.json  webpack.config.js
benchmarks/native/: Cargo.toml  README.md
benchmarks/native/benches/: benchmarks.rs
benchmarks/native/src/: main.rs
data/: README.md
data/drive/: babbage.out.clean.wasm  babbage.out.wasm  babbage.wasm  bubblesort4.out.clean.wasm  bubblesort4.out.wasm  idgcd.out.clean.wasm  idgcd.out.wasm  idgcd.wasm  two_ifs.out.clean.wasm  two_ifs.wasm
data/eqcheck/: babbage.wat  div0.wasm  div0.wat  div0_2.wasm  div0_2.wat  float.wat  idgcd.wasm  leqand.wasm  memarray.wat  memle.wasm  memle.wat  memorder.wasm  memorder.wat  mulshl.wasm  mulshl.wat  polynomial.wasm  polynomial.wat  popcount.wasm  popcount.wat  popcount64.wasm  popcount64.wat
data/macro/: README.md  lua.wasm  lua_mini.clean.wasm  lua_mini.clean.wat  lua_mini.out.clean.wasm  lua_mini.out.clean.wat  lua_mini.out.wasm  lua_mini.wasm  raytracer.clean.wasm  raytracer.out.clean.wasm  raytracer.out.clean.wo.wasm  raytracer.out.wasm  raytracer.wasm  sha256.clean.wasm  sha256.clean.wat  sha256.out.clean.wasm  sha256.out.clean.wat  sha256.out.wasm  sha256.wasm
data/micro/: README.md  babbage.exp.wasm  babbage.opt.exp.wasm  babbage.out.wasm  babbage.wasm  bubblesort4.exp.n=1m.wasm  bubblesort4.exp.wasm  bubblesort4.opt.exp.n=1m.wasm  bubblesort4.opt.exp.wasm  bubblesort4.wasm  conststreq.wasm  eqbranches1.opt.wasm  eqbranches1.wasm  (+37 more)
opti/: README.md  package.yaml  stack.yaml
(+143 files in other folders)
