[package]
name = "wasm-native-benchmarks"
version = "0.1.0"
authors = ["Dennis <d.g.sprokholt@students.uu.nl>"]
edition = "2018"

[dev-dependencies]
wasmer-runtime = "0.17.1"
wasmer-runtime-core = "0.17.1"
criterion = "0.3"
gnuplot = "0.0.37"
rand = "0.7.3"

[dependencies]
wasmer-runtime = "0.17.1"
wasmer-runtime-core = "0.17.1"
rand = "0.7.3"
csv = "1.1.4"

[[bench]]
name = "benchmarks"
harness = false
